deploy: 88c70c4eb30b36475bdb1db6819a20abab7f5898

--- a/talks/building-conf-healthcare-through-chaos-eng/index.html
+++ b/talks/building-conf-healthcare-through-chaos-eng/index.html
@@ -6,9 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Building Confidence in Healthcare Systems Through Chaos Engineering - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Building Confidence in Healthcare Systems Through Chaos Engineering" />
-<meta property="og:description" content="This talk presented at QCon San Francisco 2019.
-
- Recording Slides Get the 8.5 x 11&quot; PDF hand-out QCon SF 2019 Recap: Blog post that summarized my experience at the conference and all of my notes.  This guide includes a second page, to convert the guide into a paper airplane." />
+<meta property="og:description" content="QCon San Francisco 2019 recording Slides Get the 8.5 x 11&quot; PDF hand-out QCon SF 2019 Recap: Blog post that summarized my experience at the conference and all of my notes.  This guide includes a second page, to convert the guide into a paper airplane." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/" /><meta property="og:image" content="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/building-confidence-in-healthcare-systems.png"/><meta property="article:section" content="talks" />
 
@@ -17,13 +15,11 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/building-confidence-in-healthcare-systems.png"/>
 <meta name="twitter:title" content="Building Confidence in Healthcare Systems Through Chaos Engineering"/>
-<meta name="twitter:description" content="This talk presented at QCon San Francisco 2019.
-
- Recording Slides Get the 8.5 x 11&quot; PDF hand-out QCon SF 2019 Recap: Blog post that summarized my experience at the conference and all of my notes.  This guide includes a second page, to convert the guide into a paper airplane."/>
+<meta name="twitter:description" content="QCon San Francisco 2019 recording Slides Get the 8.5 x 11&quot; PDF hand-out QCon SF 2019 Recap: Blog post that summarized my experience at the conference and all of my notes.  This guide includes a second page, to convert the guide into a paper airplane."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/" /><link rel="prev" href="https://che55er.io/talks/chaos-with-care/" /><link rel="next" href="https://che55er.io/talks/decisions-the-pursuit-of-options/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/" /><link rel="prev" href="https://che55er.io/talks/innovation-invigoration/" /><link rel="next" href="https://che55er.io/talks/decisions-the-pursuit-of-options/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -37,7 +33,7 @@
                             "url": "https:\/\/che55er.io\/talks\/building-conf-healthcare-through-chaos-eng\/building-confidence-in-healthcare-systems.png",
                             "width":  2464 ,
                             "height":  875 
-                        }],"genre": "talks","wordcount":  49 ,
+                        }],"genre": "talks","wordcount":  45 ,
         "url": "https:\/\/che55er.io\/talks\/building-conf-healthcare-through-chaos-eng\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
@@ -123,8 +119,7 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Building Confidence in Healthcare Systems Through Chaos Engineering</h1><div class="content" id="content"><p>This talk presented at QCon San Francisco 2019.</p>
-<p><a href="https://www.infoq.com/presentations/cerner-resiliency" target="_blank" rel="noopener noreffer"><img
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Building Confidence in Healthcare Systems Through Chaos Engineering</h1><div class="content" id="content"><p><a href="https://www.infoq.com/presentations/cerner-resiliency" target="_blank" rel="noopener noreffer"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="slides-preview.png"
@@ -133,8 +128,8 @@
         alt="/talks/building-conf-healthcare-through-chaos-eng/slides-preview.png"
         title="/talks/building-conf-healthcare-through-chaos-eng/slides-preview.png" /></a></p>
 <ul>
-<li><a href="https://www.infoq.com/presentations/cerner-resiliency" target="_blank" rel="noopener noreffer">Recording</a></li>
-<li><a href="/static/slides/qcon-sf-2019-confidence-building-w-chaos-engineering.pdf" rel="">Slides</a></li>
+<li><a href="https://www.infoq.com/presentations/cerner-resiliency" target="_blank" rel="noopener noreffer">QCon San Francisco 2019 recording</a></li>
+<li><a href="/slides/qcon-sf-2019-confidence-building-w-chaos-engineering.pdf" rel="">Slides</a></li>
 <li><a href="/guides/getting-started-w-chaos-exp-guide.pdf" rel="">Get the 8.5 x 11&quot; PDF hand-out</a></li>
 <li><a href="/post/qcon-sf-2019-recap" rel="">QCon SF 2019 Recap</a>: Blog post that summarized my experience at the conference and all of my notes.</li>
 </ul>
