--- a/talks/learn-in-prod-w-traffic-mgmt/index.html
+++ b/talks/learn-in-prod-w-traffic-mgmt/index.html
@@ -5,36 +5,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Innovation Invigoration - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Innovation Invigoration" />
-<meta property="og:description" content="When I began my career in software engineering, I was fueled by the joy of programming and working through unique problems knowing that an answer would be discoverable through my trusty debugger and perseverance. As my career grew in the field, I began to learn more of the challenging constraints with large systems, human organizations, and complexity that seemed untamable. Through additional exposure to these larger problems that no longer could be tackled through the use of my beloved debugger, I began to see how it required different care and feeding at both the personal and team level to overcome these challenges." />
+        <title>Learn in Production with Traffic Management - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Learn in Production with Traffic Management" />
+<meta property="og:description" content="Abstract Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.
+In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/innovation-invigoration/" /><meta property="og:image" content="https://che55er.io/talks/innovation-invigoration/innovation-invigoration.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><meta property="og:image" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/learn-in-prod-w-traffic-mgmt.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/talks/innovation-invigoration/innovation-invigoration.png"/>
-<meta name="twitter:title" content="Innovation Invigoration"/>
-<meta name="twitter:description" content="When I began my career in software engineering, I was fueled by the joy of programming and working through unique problems knowing that an answer would be discoverable through my trusty debugger and perseverance. As my career grew in the field, I began to learn more of the challenging constraints with large systems, human organizations, and complexity that seemed untamable. Through additional exposure to these larger problems that no longer could be tackled through the use of my beloved debugger, I began to see how it required different care and feeding at both the personal and team level to overcome these challenges."/>
+<meta name="twitter:image" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/learn-in-prod-w-traffic-mgmt.png"/>
+<meta name="twitter:title" content="Learn in Production with Traffic Management"/>
+<meta name="twitter:description" content="Abstract Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.
+In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/innovation-invigoration/" /><link rel="prev" href="https://che55er.io/talks/chaos-with-care/" /><link rel="next" href="https://che55er.io/talks/building-conf-healthcare-through-chaos-eng/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><link rel="next" href="https://che55er.io/talks/docs-as-code/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "Innovation Invigoration",
+        "headline": "Learn in Production with Traffic Management",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/che55er.io\/talks\/innovation-invigoration\/"
+            "@id": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/"
         },"image": [{
                             "@type": "ImageObject",
-                            "url": "https:\/\/che55er.io\/talks\/innovation-invigoration\/innovation-invigoration.png",
-                            "width":  2458 ,
-                            "height":  879 
-                        }],"genre": "talks","wordcount":  306 ,
-        "url": "https:\/\/che55er.io\/talks\/innovation-invigoration\/","publisher": {
+                            "url": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/learn-in-prod-w-traffic-mgmt.png",
+                            "width":  2362 ,
+                            "height":  1262 
+                        }],"genre": "talks","wordcount":  130 ,
+        "url": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
                 "@type": "Person",
@@ -119,14 +121,14 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Innovation Invigoration</h1><div class="content" id="content">
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/u-aA537qj3w" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
-
-<p>When I began my career in software engineering, I was fueled by the joy of programming and working through unique problems knowing that an answer would be discoverable through my trusty debugger and perseverance. As my career grew in the field, I began to learn more of the challenging constraints with large systems, human organizations, and complexity that seemed untamable. Through additional exposure to these larger problems that no longer could be tackled through the use of my beloved debugger, I began to see how it required different care and feeding at both the personal and team level to overcome these challenges. By investing in these areas, it would invigorate our creative process and deliver ideas that would contradict our traditional thinking.</p>
-<p>In this talk, we will explore approaches that I have found to be effective in improving your creative thinking process, bringing diverse ideas into teams, and building a culture of routine learning from different perspectives. From these approaches, we will look at ways to effectively pitch ideas to introduce change in your systems and in your teams, which can breathe life into the possibilities of different solutions to previous difficult challenges. We will also briefly cover things to combat routine costs to the team, which can give more focus on how to tackle the larger problems versus being distracted by the continuous noise that can drain your joy of programming.</p>
-<p>After this talk, you will have a series of approaches that you can begin applying immediately to yourself and your team to invigorate your problem-solving approaches. Through my experience, these also bring additional benefits of improved morale and optimism by witnessing new ways to effectively change something. All attendees of this talk will receive a limited edition DevCon 2020 guide on these approaches, which will include rare, never before seen, illustrations by the speaker.</p>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Learn in Production with Traffic Management</h1><div class="content" id="content"><h1 id="abstract">Abstract</h1>
+<p>Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.</p>
+<p>In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns. These patterns will be shared, and the lessons learned through their application. If you are interested in minimizing risk when introducing change in your systems and getting insights into your system along the way, this talk is for you!</p>
+<h1 id="content">Content</h1>
+<ul>
+<li><a href="https://launchdarkly.com/trajectory/learn-in-production-with-traffic-management/" target="_blank" rel="noopener noreffer">Recording at Trajectory 2021</a></li>
+<li><a href="/slides/learn-in-prod-w-traffic-mgmt.pdf" rel="">Slides</a></li>
+</ul>
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"></div>
