deploy: fc8dac80c8646e21ba5097428de8988d5c5268f3

--- a/talks/words-matter/index.html
+++ b/talks/words-matter/index.html
@@ -5,36 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Chaos with Care - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Chaos with Care" />
-<meta property="og:description" content="Slides  In this talk, we will discuss how to introduce and grow chaos engineering in your organization. This includes how to effectively communicate this approach with leadership and related teams, strategies on how to start small and expand into more risk adverse environments, and valuable lessons learned on making it effective within your systems. Approaches will include specific examples of how teams have applied chaos engineering at Cerner Corporation, a healthcare technology company." />
+        <title>Words Matter - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Words Matter" />
+<meta property="og:description" content="We live in a complex and fast-growing industry. While other engineering disciplines have been around for 100s of years, software engineering is still in its infancy and changing often. We are asked to share ideas to influence change, but this can be challenging in this rapidly growing field. This requires conveying thoughts to different audiences which may also vary on their technical vocabulary. It may be easy to reference a software engineering principle or law that can elegantly describe a technical scenario, but it may be ineffective when conveyed to others who are not aware of that concept." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/chaos-with-care/" /><meta property="og:image" content="https://che55er.io/talks/chaos-with-care/chaos-with-care.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/words-matter/" /><meta property="og:image" content="https://che55er.io/talks/words-matter/words-matter.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/talks/chaos-with-care/chaos-with-care.png"/>
-<meta name="twitter:title" content="Chaos with Care"/>
-<meta name="twitter:description" content="Slides  In this talk, we will discuss how to introduce and grow chaos engineering in your organization. This includes how to effectively communicate this approach with leadership and related teams, strategies on how to start small and expand into more risk adverse environments, and valuable lessons learned on making it effective within your systems. Approaches will include specific examples of how teams have applied chaos engineering at Cerner Corporation, a healthcare technology company."/>
+<meta name="twitter:image" content="https://che55er.io/talks/words-matter/words-matter.png"/>
+<meta name="twitter:title" content="Words Matter"/>
+<meta name="twitter:description" content="We live in a complex and fast-growing industry. While other engineering disciplines have been around for 100s of years, software engineering is still in its infancy and changing often. We are asked to share ideas to influence change, but this can be challenging in this rapidly growing field. This requires conveying thoughts to different audiences which may also vary on their technical vocabulary. It may be easy to reference a software engineering principle or law that can elegantly describe a technical scenario, but it may be ineffective when conveyed to others who are not aware of that concept."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/chaos-with-care/" /><link rel="prev" href="https://che55er.io/talks/words-matter/" /><link rel="next" href="https://che55er.io/talks/innovation-invigoration/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/words-matter/" /><link rel="prev" href="https://che55er.io/talks/docs-as-code/" /><link rel="next" href="https://che55er.io/talks/chaos-with-care/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "Chaos with Care",
+        "headline": "Words Matter",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/che55er.io\/talks\/chaos-with-care\/"
+            "@id": "https:\/\/che55er.io\/talks\/words-matter\/"
         },"image": [{
                             "@type": "ImageObject",
-                            "url": "https:\/\/che55er.io\/talks\/chaos-with-care\/chaos-with-care.png",
-                            "width":  2459 ,
-                            "height":  878 
-                        }],"genre": "talks","wordcount":  94 ,
-        "url": "https:\/\/che55er.io\/talks\/chaos-with-care\/","publisher": {
+                            "url": "https:\/\/che55er.io\/talks\/words-matter\/words-matter.png",
+                            "width":  2880 ,
+                            "height":  1297 
+                        }],"genre": "talks","wordcount":  240 ,
+        "url": "https:\/\/che55er.io\/talks\/words-matter\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
                 "@type": "Person",
@@ -119,15 +119,14 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Chaos with Care</h1><div class="content" id="content">
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Words Matter</h1><div class="content" id="content">
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/LiGVI0UzaNQ" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/8cTV7Xd3K8s" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-<ul>
-<li><a href="/slides/chaos-carnival-feb-2021.pdf" rel="">Slides</a></li>
-</ul>
-<p>In this talk, we will discuss how to introduce and grow chaos engineering in your organization. This includes how to effectively communicate this approach with leadership and related teams, strategies on how to start small and expand into more risk adverse environments, and valuable lessons learned on making it effective within your systems. Approaches will include specific examples of how teams have applied chaos engineering at Cerner Corporation, a healthcare technology company. From this talk, you will be equipped with ideas on how to safely grow your chaos engineering practice within your organization.</p>
+<p>We live in a complex and fast-growing industry. While other engineering disciplines have been around for 100s of years, software engineering is still in its infancy and changing often. We are asked to share ideas to influence change, but this can be challenging in this rapidly growing field. This requires conveying thoughts to different audiences which may also vary on their technical vocabulary. It may be easy to reference a software engineering principle or law that can elegantly describe a technical scenario, but it may be ineffective when conveyed to others who are not aware of that concept. To be effective, we realize that words matter based on our audience.</p>
+<p>In this talk, we focus on how we can improve in communicating our technical ideas across the spectrum of stakeholders in our systems. We will walk through the art of boundary spanning, where we seek to effectively communicate across different groups. This will include ways to convey ideas with different audiences and how to readjust when misunderstandings arise. We will review concise ways of sharing software engineering concepts through laws and principles, but also approaches in guiding others who may not be familiar with the term. This will revisit timeless software engineering essays whose notoriety is based on their communication effectiveness. Finally, we will go through understanding different audiences and ways to associate relatable concepts to ensure a point is well understood.</p>
+<p>Also, here is the related <a href="/guides/words-matter-guide.pdf" rel=""><i class='fas fa-map'></i> Words Matter guide</a>.</p>
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"></div>
