--- a/talks/tend-to-your-o11y-garden/index.html
+++ b/talks/tend-to-your-o11y-garden/index.html
@@ -5,38 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Learn in Production with Traffic Management - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Learn in Production with Traffic Management" />
-<meta property="og:description" content="Abstract Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.
-In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns." />
+        <title>Tend to your Observability Garden - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Tend to your Observability Garden" />
+<meta property="og:description" content="This talk was presented at New Relic&rsquo;s FutureStack 2022 conference, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><meta property="og:image" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/learn-in-prod-w-traffic-mgmt.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/tend-to-your-o11y-garden/" /><meta property="og:image" content="https://che55er.io/talks/tend-to-your-o11y-garden/tend-to-your-o11y-garden.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/learn-in-prod-w-traffic-mgmt.png"/>
-<meta name="twitter:title" content="Learn in Production with Traffic Management"/>
-<meta name="twitter:description" content="Abstract Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.
-In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns."/>
+<meta name="twitter:image" content="https://che55er.io/talks/tend-to-your-o11y-garden/tend-to-your-o11y-garden.png"/>
+<meta name="twitter:title" content="Tend to your Observability Garden"/>
+<meta name="twitter:description" content="This talk was presented at New Relic&rsquo;s FutureStack 2022 conference, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><link rel="prev" href="https://che55er.io/talks/tend-to-your-o11y-garden/" /><link rel="next" href="https://che55er.io/talks/docs-as-code/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/tend-to-your-o11y-garden/" /><link rel="next" href="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "Learn in Production with Traffic Management",
+        "headline": "Tend to your Observability Garden",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/"
+            "@id": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/"
         },"image": [{
                             "@type": "ImageObject",
-                            "url": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/learn-in-prod-w-traffic-mgmt.png",
-                            "width":  2362 ,
-                            "height":  1262 
-                        }],"genre": "talks","wordcount":  130 ,
-        "url": "https:\/\/che55er.io\/talks\/learn-in-prod-w-traffic-mgmt\/","publisher": {
+                            "url": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/tend-to-your-o11y-garden.png",
+                            "width":  1463 ,
+                            "height":  510 
+                        }],"genre": "talks","wordcount":  73 ,
+        "url": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
                 "@type": "Person",
@@ -121,14 +119,13 @@ In this talk, we will cover approaches applied at Cerner Corporation when evolvi
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Learn in Production with Traffic Management</h1><div class="content" id="content"><h1 id="abstract">Abstract</h1>
-<p>Our systems are continually evolving, spurring the necessity to focus on how we can introduce changes which minimize the risk of a “big bang” event. By examining how traffic flows through your distributed systems, you can find ways of testing and evaluating gradual changes. By understanding different ways of managing your traffic, you build new options for evolving and testing your systems.</p>
-<p>In this talk, we will cover approaches applied at Cerner Corporation when evolving their service ecosystem by leveraging different traffic management patterns. These patterns will be shared, and the lessons learned through their application. If you are interested in minimizing risk when introducing change in your systems and getting insights into your system along the way, this talk is for you!</p>
-<h1 id="content">Content</h1>
-<ul>
-<li><a href="https://launchdarkly.com/trajectory/learn-in-production-with-traffic-management/" target="_blank" rel="noopener noreffer">Recording at Trajectory 2021</a></li>
-<li><a href="/slides/learn-in-prod-w-traffic-mgmt.pdf" rel="">Slides</a></li>
-</ul>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Tend to your Observability Garden</h1><div class="content" id="content"><p>This talk was presented at <a href="https://newrelic.com/futurestack" target="_blank" rel="noopener noreffer">New Relic&rsquo;s FutureStack 2022 conference</a>, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic.</p>
+<h1 id="recording">Recording</h1>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/bHgTDQbGFAs" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"></div>
