--- a/talks/regex-express/index.html
+++ b/talks/regex-express/index.html
@@ -5,36 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Tend to your Observability Garden - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Tend to your Observability Garden" />
-<meta property="og:description" content="This talk was presented at New Relic&rsquo;s FutureStack 2022 conference, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic." />
+        <title>Regex Express - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Regex Express" />
+<meta property="og:description" content="Learning References Coming soon!" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/tend-to-your-o11y-garden/" /><meta property="og:image" content="https://che55er.io/talks/tend-to-your-o11y-garden/tend-to-your-o11y-garden.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/regex-express/" /><meta property="og:image" content="https://che55er.io/talks/regex-express/regex-express.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/talks/tend-to-your-o11y-garden/tend-to-your-o11y-garden.png"/>
-<meta name="twitter:title" content="Tend to your Observability Garden"/>
-<meta name="twitter:description" content="This talk was presented at New Relic&rsquo;s FutureStack 2022 conference, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic."/>
+<meta name="twitter:image" content="https://che55er.io/talks/regex-express/regex-express.png"/>
+<meta name="twitter:title" content="Regex Express"/>
+<meta name="twitter:description" content="Learning References Coming soon!"/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/tend-to-your-o11y-garden/" /><link rel="prev" href="https://che55er.io/talks/regex-express/" /><link rel="next" href="https://che55er.io/talks/learn-in-prod-w-traffic-mgmt/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/regex-express/" /><link rel="next" href="https://che55er.io/talks/tend-to-your-o11y-garden/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "Tend to your Observability Garden",
+        "headline": "Regex Express",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/"
+            "@id": "https:\/\/che55er.io\/talks\/regex-express\/"
         },"image": [{
                             "@type": "ImageObject",
-                            "url": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/tend-to-your-o11y-garden.png",
-                            "width":  1463 ,
-                            "height":  510 
-                        }],"genre": "talks","wordcount":  73 ,
-        "url": "https:\/\/che55er.io\/talks\/tend-to-your-o11y-garden\/","publisher": {
+                            "url": "https:\/\/che55er.io\/talks\/regex-express\/regex-express.png",
+                            "width":  3273 ,
+                            "height":  1396 
+                        }],"genre": "talks","wordcount":  4 ,
+        "url": "https:\/\/che55er.io\/talks\/regex-express\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
                 "@type": "Person",
@@ -119,13 +119,8 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Tend to your Observability Garden</h1><div class="content" id="content"><p>This talk was presented at <a href="https://newrelic.com/futurestack" target="_blank" rel="noopener noreffer">New Relic&rsquo;s FutureStack 2022 conference</a>, which focused on sharing lessons learned when dealing with some of the sociotechnical challenges in system observability within a large organization. This walks through some practical examples with how we focused on cultural aspects of learning and sharing approaches, while also including concrete examples in how we scaled and seeked ways in balancing consistency and autonomy in the usage of New Relic.</p>
-<h1 id="recording">Recording</h1>
-
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/bHgTDQbGFAs" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
-
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Regex Express</h1><div class="content" id="content"><h1 id="learning-references">Learning References</h1>
+<p>Coming soon!</p>
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"></div>
