--- a/blog-series/index.html
+++ b/blog-series/index.html
@@ -6,8 +6,8 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>blog series - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="blog series" />
-<meta property="og:description" content="This is a collection of blogs that were segments of content that carried a similar theme, but were broken into individual posts.
-Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over the challenges of technical decision making and tactics that can be applied to improve them. Power of Murphy&rsquo;s Law: In this blog post, I share the power (the good and bad) of Murphy&rsquo;s Law." />
+<meta property="og:description" content="This is a collection of blogs that carried a similar theme, but were broken into individual posts.
+Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over the challenges of technical decision making and tactics that can be applied to improve them. Power of Murphy&rsquo;s Law: In this blog post, I share the power (the good and bad) of Murphy&rsquo;s Law. We learn from failure, but we also don&rsquo;t want to be blinded by it&hellip;like from this fire breathing unicorn." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://che55er.io/blog-series/" /><meta property="og:image" content="https://che55er.io/img/avatar-icon.png"/><meta property="article:section" content="" />
 
@@ -17,8 +17,8 @@ Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over
 <meta name="twitter:image" content="https://che55er.io/img/avatar-icon.png"/>
 
 <meta name="twitter:title" content="blog series"/>
-<meta name="twitter:description" content="This is a collection of blogs that were segments of content that carried a similar theme, but were broken into individual posts.
-Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over the challenges of technical decision making and tactics that can be applied to improve them. Power of Murphy&rsquo;s Law: In this blog post, I share the power (the good and bad) of Murphy&rsquo;s Law."/>
+<meta name="twitter:description" content="This is a collection of blogs that carried a similar theme, but were broken into individual posts.
+Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over the challenges of technical decision making and tactics that can be applied to improve them. Power of Murphy&rsquo;s Law: In this blog post, I share the power (the good and bad) of Murphy&rsquo;s Law. We learn from failure, but we also don&rsquo;t want to be blinded by it&hellip;like from this fire breathing unicorn."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -31,7 +31,7 @@ Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/che55er.io\/blog-series\/"
-        },"image": ["https:\/\/che55er.io\/images\/Apple-Devices-Preview.png"],"genre": "page","wordcount":  175 ,
+        },"image": ["https:\/\/che55er.io\/images\/Apple-Devices-Preview.png"],"genre": "page","wordcount":  170 ,
         "url": "https:\/\/che55er.io\/blog-series\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
@@ -117,7 +117,7 @@ Decision Making Album  Decisions: The Pursuit of Options: A talk which I go over
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">blog series</h1><h2 class="single-subtitle">collections of blogs</h2><div class="content" id="content"><p>This is a collection of blogs that were segments of content that carried a similar theme, but were broken into individual posts.</p>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">blog series</h1><h2 class="single-subtitle">collections of blogs</h2><div class="content" id="content"><p>This is a collection of blogs that carried a similar theme, but were broken into individual posts.</p>
 <h2 id="decision-making-album">Decision Making Album</h2>
 <ul>
 <li><a href="/post/decisions-the-pursuit-of-options" rel="">Decisions: The Pursuit of Options</a>: A talk which I go over the challenges of technical decision making and tactics that can be applied to improve them.</li>
