deploy: 3f24619d66ef3b4887db134cdde857d0ddf4d722

--- a/talks/nrql-bonanza/index.html
+++ b/talks/nrql-bonanza/index.html
@@ -5,38 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Navigating Change with Communities of Practice - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Navigating Change with Communities of Practice" />
-<meta property="og:description" content="Presentation was part of DevOps Enterprise Summit - Virtual 2022.
-Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent horizontal communication, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected." />
+        <title>NRQL Bonanza - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="NRQL Bonanza" />
+<meta property="og:description" content="This talk was part of a New Relic User Group session in August 2023. This short talk walks through some different examples of data you can access in New Relic &hellip; which you may not have known about. This can include data about your data usage (ingestion), your agents (version compliance), and even the queries being executed. This also includes ways you can explore the data dictionary or execute queries through NerdGraph (GraphQL)." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/navigating-change-w-cop/" /><meta property="og:image" content="https://che55er.io/talks/navigating-change-w-cop/navigating-change-w-cop-cover.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/nrql-bonanza/" /><meta property="og:image" content="https://che55er.io/talks/nrql-bonanza/nrql-bonanza.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/talks/navigating-change-w-cop/navigating-change-w-cop-cover.png"/>
-<meta name="twitter:title" content="Navigating Change with Communities of Practice"/>
-<meta name="twitter:description" content="Presentation was part of DevOps Enterprise Summit - Virtual 2022.
-Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent horizontal communication, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected."/>
+<meta name="twitter:image" content="https://che55er.io/talks/nrql-bonanza/nrql-bonanza.png"/>
+<meta name="twitter:title" content="NRQL Bonanza"/>
+<meta name="twitter:description" content="This talk was part of a New Relic User Group session in August 2023. This short talk walks through some different examples of data you can access in New Relic &hellip; which you may not have known about. This can include data about your data usage (ingestion), your agents (version compliance), and even the queries being executed. This also includes ways you can explore the data dictionary or execute queries through NerdGraph (GraphQL)."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/navigating-change-w-cop/" /><link rel="prev" href="https://che55er.io/talks/nrql-bonanza/" /><link rel="next" href="https://che55er.io/talks/regex-express/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://che55er.io/talks/nrql-bonanza/" /><link rel="next" href="https://che55er.io/talks/navigating-change-w-cop/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "Navigating Change with Communities of Practice",
+        "headline": "NRQL Bonanza",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/che55er.io\/talks\/navigating-change-w-cop\/"
+            "@id": "https:\/\/che55er.io\/talks\/nrql-bonanza\/"
         },"image": [{
                             "@type": "ImageObject",
-                            "url": "https:\/\/che55er.io\/talks\/navigating-change-w-cop\/navigating-change-w-cop-cover.png",
-                            "width":  1597 ,
-                            "height":  472 
-                        }],"genre": "talks","wordcount":  212 ,
-        "url": "https:\/\/che55er.io\/talks\/navigating-change-w-cop\/","publisher": {
+                            "url": "https:\/\/che55er.io\/talks\/nrql-bonanza\/nrql-bonanza.png",
+                            "width":  1601 ,
+                            "height":  473 
+                        }],"genre": "talks","wordcount":  85 ,
+        "url": "https:\/\/che55er.io\/talks\/nrql-bonanza\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
                 "@type": "Person",
@@ -121,23 +119,14 @@ Abstract Change is something we must continually navigate. In a large organizati
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Navigating Change with Communities of Practice</h1><div class="content" id="content"><p><img
-        class="lazyload"
-        src="/svg/loading.min.svg"
-        data-src="navigating-change-w-cop.png"
-        data-srcset="/talks/navigating-change-w-cop/navigating-change-w-cop.png, navigating-change-w-cop.png 1.5x, /talks/navigating-change-w-cop/navigating-change-w-cop.png 2x"
-        data-sizes="auto"
-        alt="/talks/navigating-change-w-cop/navigating-change-w-cop.png"
-        title="/talks/navigating-change-w-cop/navigating-change-w-cop.png" /></p>
-<p><em>Presentation was part of <a href="https://doesus2022.sched.com/" target="_blank" rel="noopener noreffer">DevOps Enterprise Summit - Virtual 2022</a></em>.</p>
-<h1 id="abstract">Abstract</h1>
-<p>Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent horizontal communication, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected. This should recognize that we cannot increase the cognitive load on our teams through excessive forms of communication. There must be a better way.</p>
-<p>Communities of Practice can serve as a way to enable horizontal communication, creating a support network of knowledge when navigating change, and embraces the influence of Conway’s Law on our systems. At Oracle Cerner, we have been working through how we form and leverage Communities of Practice to bring together active practitioners across organizational groups to support each other as we work through change. In this talk, we will share lessons learned in this approach and valuable resources we discovered through our journey.</p>
-<p>If you are a medium or large sized organization where it is challenging to navigate change consistently across all your teams, this talk is for you!</p>
-<h1 id="content">Content</h1>
-<ul>
-<li><a href="/slides/does22-navigating-change-w-communities-of-practice.pdf" rel="">Slides</a></li>
-</ul>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">NRQL Bonanza</h1><div class="content" id="content"><p>This talk was part of a New Relic User Group session in August 2023. This short talk
+walks through some different examples of data you can access in New Relic &hellip;
+which you may not have known about. This can include data about your data usage
+(ingestion), your agents (version compliance), and even the queries being executed.
+This also includes ways you can explore the data dictionary or execute queries
+through NerdGraph (GraphQL).</p>
+<iframe src="https://cchesser.github.io/nrql-bonanza/" width="640" height="360" style="	aspect-ratio: 16 / 9; height: 100%; width: 100%;" frameborder="0"></iframe>
+<p><em>You can view <a href="https://cchesser.github.io/nrql-bonanza/" target="_blank" rel="noopener noreffer">the full slides here</a>, which are implemented with <a href="https://revealjs.com/" target="_blank" rel="noopener noreffer">revealjs</a>.</em></p>
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"></div>
